[package]
name = "bellavista"
version = "0.0.1"
authors = ["lucas.jenss"]
edition = "2018"
license = "GPL-3.0-only"

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
druid = ""
bytesize = "1.0.0"
piet = ""
piet-common = ""

[patch.crates-io]
druid = { path = "vendor/druid/druid"}
#piet = { path = "vendor/piet/piet"}
#piet-coregraphics = { path = "vendor/piet/piet-coregraphics"}
