[package]
name = "bellavista"
version = "0.0.1"
authors = ["lucas.jenss"]
edition = "2018"
license = "GPL-3.0-only"

[profile.dev]
split-debuginfo = "unpacked"

[dependencies]
druid = { git = "https://github.com/linebender/druid", branch = "master" }
bytesize = "1.0.0"

[patch.crates-io]
#druid = { path = "vendor/druid/druid"}
#piet = { path = "vendor/piet/piet"}
#piet-coregraphics = { path = "vendor/piet/piet-coregraphics"}
